--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -5,7 +5,7 @@
   align-items: center;
 
   .menu-icon {
-    font-size: 25px;
+    width: 28px;
     display: none;
     cursor: pointer;
   }
@@ -47,5 +47,7 @@
 
 
 .button{
-  margin-left: 15px;
+  margin-left: 25px;
+  width: 28px;
+  cursor: pointer;
 }
